--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: teste_tecnico_fteam
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
@@ -9,11 +9,26 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^3.4.1
+  dio: ^5.7.0
+  equatable: ^2.0.5
+  flutter_bloc: ^8.1.6
+  freezed_annotation: ^2.4.4
+  get_it: ^8.0.2
+  go_router: ^14.6.2
+  json_annotation: ^4.9.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  bloc_test: ^9.1.7
+  build_runner: ^2.4.13
   flutter_lints: ^5.0.0
+  freezed: ^2.5.7
+  json_serializable: ^6.8.0
+  mocktail: ^1.0.4
+  very_good_analysis: ^6.0.0
 
 flutter:
   uses-material-design: true
